Reference/lab2/yzk/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | ε

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt

    7 ExtDecList: VarDec
    8           | VarDec COMMA ExtDecList

    9 Specifier: TYPE
   10          | StructSpecifier

   11 StructSpecifier: STRUCT OptTag LC DefList RC
   12                | STRUCT Tag

   13 OptTag: ID
   14       | ε

   15 Tag: ID

   16 VarDec: ID
   17       | VarDec LB INT RB
   18       | error RB

   19 FunDec: ID LP VarList RP
   20       | ID LP RP

   21 VarList: ParamDec COMMA VarList
   22        | ParamDec

   23 ParamDec: Specifier VarDec

   24 CompSt: LC DefList StmtList RC
   25       | error RC

   26 StmtList: Stmt StmtList
   27         | ε

   28 Stmt: Exp SEMI
   29     | CompSt
   30     | RETURN Exp SEMI
   31     | IF LP Exp RP Stmt
   32     | IF LP Exp RP Stmt ELSE Stmt
   33     | WHILE LP Exp RP Stmt
   34     | error SEMI

   35 DefList: Def DefList
   36        | ε

   37 Def: Specifier DecList SEMI

   38 DecList: Dec
   39        | Dec COMMA DecList

   40 Dec: VarDec
   41    | VarDec ASSIGNOP Exp

   42 Exp: Exp ASSIGNOP Exp
   43    | Exp AND Exp
   44    | Exp OR Exp
   45    | Exp RELOP Exp
   46    | Exp PLUS Exp
   47    | Exp MINUS Exp
   48    | Exp STAR Exp
   49    | Exp DIV Exp
   50    | LP Exp RP
   51    | MINUS Exp
   52    | NOT Exp
   53    | ID LP Args RP
   54    | ID LP RP
   55    | Exp LB Exp RB
   56    | Exp DOT ID
   57    | ID
   58    | INT
   59    | FLOAT

   60 Args: Exp COMMA Args
   61     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 18 25 34
    INT <node> (258) 17 58
    FLOAT <node> (259) 59
    ID <node> (260) 13 15 16 19 20 53 54 56 57
    TYPE <node> (261) 9
    COMMA <node> (262) 8 21 39 60
    DOT <node> (263) 56
    SEMI <node> (264) 4 5 28 30 34 37
    RELOP <node> (265) 45
    ASSIGNOP <node> (266) 41 42
    PLUS <node> (267) 46
    MINUS <node> (268) 47 51
    STAR <node> (269) 48
    DIV <node> (270) 49
    AND <node> (271) 43
    OR <node> (272) 44
    NOT <node> (273) 52
    LP <node> (274) 19 20 31 32 33 50 53 54
    RP <node> (275) 19 20 31 32 33 50 53 54
    LB <node> (276) 17 55
    RB <node> (277) 17 18 55
    LC <node> (278) 11 24
    RC <node> (279) 11 24 25
    IF <node> (280) 31 32
    ELSE <node> (281) 32
    WHILE <node> (282) 33
    STRUCT <node> (283) 11 12
    RETURN <node> (284) 30


Nonterminals, with rules where they appear

    $accept (30)
        on left: 0
    Program <node> (31)
        on left: 1
        on right: 0
    ExtDefList <node> (32)
        on left: 2 3
        on right: 1 2
    ExtDef <node> (33)
        on left: 4 5 6
        on right: 2
    ExtDecList <node> (34)
        on left: 7 8
        on right: 4 8
    Specifier <node> (35)
        on left: 9 10
        on right: 4 5 6 23 37
    StructSpecifier <node> (36)
        on left: 11 12
        on right: 10
    OptTag <node> (37)
        on left: 13 14
        on right: 11
    Tag <node> (38)
        on left: 15
        on right: 12
    VarDec <node> (39)
        on left: 16 17 18
        on right: 7 8 17 23 40 41
    FunDec <node> (40)
        on left: 19 20
        on right: 6
    VarList <node> (41)
        on left: 21 22
        on right: 19 21
    ParamDec <node> (42)
        on left: 23
        on right: 21 22
    CompSt <node> (43)
        on left: 24 25
        on right: 6 29
    StmtList <node> (44)
        on left: 26 27
        on right: 24 26
    Stmt <node> (45)
        on left: 28 29 30 31 32 33 34
        on right: 26 31 32 33
    DefList <node> (46)
        on left: 35 36
        on right: 11 24 35
    Def <node> (47)
        on left: 37
        on right: 35
    DecList <node> (48)
        on left: 38 39
        on right: 37 39
    Dec <node> (49)
        on left: 40 41
        on right: 38 39
    Exp <node> (50)
        on left: 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59
        on right: 28 30 31 32 33 41 42 43 44 45 46 47 48 49 50 51 52 55 56 60 61
    Args <node> (51)
        on left: 60 61
        on right: 53 60


State 0

    0 $accept: • Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

    9 Specifier: TYPE •

    $default  reduce using rule 9 (Specifier)


State 2

   11 StructSpecifier: STRUCT • OptTag LC DefList RC
   12                | STRUCT • Tag

    ID  shift, and go to state 8

    $default  reduce using rule 14 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 3

    0 $accept: Program • $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList •

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef • ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier • ExtDecList SEMI
    5       | Specifier • SEMI
    6       | Specifier • FunDec CompSt

    error  shift, and go to state 13
    ID     shift, and go to state 14
    SEMI   shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


State 7

   10 Specifier: StructSpecifier •

    $default  reduce using rule 10 (Specifier)


State 8

   13 OptTag: ID •
   15 Tag: ID •

    LC        reduce using rule 13 (OptTag)
    $default  reduce using rule 15 (Tag)


State 9

   11 StructSpecifier: STRUCT OptTag • LC DefList RC

    LC  shift, and go to state 19


State 10

   12 StructSpecifier: STRUCT Tag •

    $default  reduce using rule 12 (StructSpecifier)


State 11

    0 $accept: Program $end •

    $default  accept


State 12

    2 ExtDefList: ExtDef ExtDefList •

    $default  reduce using rule 2 (ExtDefList)


State 13

   18 VarDec: error • RB

    RB  shift, and go to state 20


State 14

   16 VarDec: ID •
   19 FunDec: ID • LP VarList RP
   20       | ID • LP RP

    LP  shift, and go to state 21

    $default  reduce using rule 16 (VarDec)


State 15

    5 ExtDef: Specifier SEMI •

    $default  reduce using rule 5 (ExtDef)


State 16

    4 ExtDef: Specifier ExtDecList • SEMI

    SEMI  shift, and go to state 22


State 17

    7 ExtDecList: VarDec •
    8           | VarDec • COMMA ExtDecList
   17 VarDec: VarDec • LB INT RB

    COMMA  shift, and go to state 23
    LB     shift, and go to state 24

    $default  reduce using rule 7 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec • CompSt

    error  shift, and go to state 25
    LC     shift, and go to state 26

    CompSt  go to state 27


State 19

   11 StructSpecifier: STRUCT OptTag LC • DefList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 36 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 29
    Def              go to state 30


State 20

   18 VarDec: error RB •

    $default  reduce using rule 18 (VarDec)


State 21

   19 FunDec: ID LP • VarList RP
   20       | ID LP • RP

    TYPE    shift, and go to state 1
    RP      shift, and go to state 31
    STRUCT  shift, and go to state 2

    Specifier        go to state 32
    StructSpecifier  go to state 7
    VarList          go to state 33
    ParamDec         go to state 34


State 22

    4 ExtDef: Specifier ExtDecList SEMI •

    $default  reduce using rule 4 (ExtDef)


State 23

    8 ExtDecList: VarDec COMMA • ExtDecList

    error  shift, and go to state 13
    ID     shift, and go to state 35

    ExtDecList  go to state 36
    VarDec      go to state 17


State 24

   17 VarDec: VarDec LB • INT RB

    INT  shift, and go to state 37


State 25

   25 CompSt: error • RC

    RC  shift, and go to state 38


State 26

   24 CompSt: LC • DefList StmtList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 36 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 39
    Def              go to state 30


State 27

    6 ExtDef: Specifier FunDec CompSt •

    $default  reduce using rule 6 (ExtDef)


State 28

   37 Def: Specifier • DecList SEMI

    error  shift, and go to state 13
    ID     shift, and go to state 35

    VarDec   go to state 40
    DecList  go to state 41
    Dec      go to state 42


State 29

   11 StructSpecifier: STRUCT OptTag LC DefList • RC

    RC  shift, and go to state 43


State 30

   35 DefList: Def • DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 36 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 44
    Def              go to state 30


State 31

   20 FunDec: ID LP RP •

    $default  reduce using rule 20 (FunDec)


State 32

   23 ParamDec: Specifier • VarDec

    error  shift, and go to state 13
    ID     shift, and go to state 35

    VarDec  go to state 45


State 33

   19 FunDec: ID LP VarList • RP

    RP  shift, and go to state 46


State 34

   21 VarList: ParamDec • COMMA VarList
   22        | ParamDec •

    COMMA  shift, and go to state 47

    $default  reduce using rule 22 (VarList)


State 35

   16 VarDec: ID •

    $default  reduce using rule 16 (VarDec)


State 36

    8 ExtDecList: VarDec COMMA ExtDecList •

    $default  reduce using rule 8 (ExtDecList)


State 37

   17 VarDec: VarDec LB INT • RB

    RB  shift, and go to state 48


State 38

   25 CompSt: error RC •

    $default  reduce using rule 25 (CompSt)


State 39

   24 CompSt: LC DefList • StmtList RC

    error   shift, and go to state 49
    INT     shift, and go to state 50
    FLOAT   shift, and go to state 51
    ID      shift, and go to state 52
    MINUS   shift, and go to state 53
    NOT     shift, and go to state 54
    LP      shift, and go to state 55
    LC      shift, and go to state 26
    IF      shift, and go to state 56
    WHILE   shift, and go to state 57
    RETURN  shift, and go to state 58

    RC  reduce using rule 27 (StmtList)

    CompSt    go to state 59
    StmtList  go to state 60
    Stmt      go to state 61
    Exp       go to state 62


State 40

   17 VarDec: VarDec • LB INT RB
   40 Dec: VarDec •
   41    | VarDec • ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 63
    LB        shift, and go to state 24

    $default  reduce using rule 40 (Dec)


State 41

   37 Def: Specifier DecList • SEMI

    SEMI  shift, and go to state 64


State 42

   38 DecList: Dec •
   39        | Dec • COMMA DecList

    COMMA  shift, and go to state 65

    $default  reduce using rule 38 (DecList)


State 43

   11 StructSpecifier: STRUCT OptTag LC DefList RC •

    $default  reduce using rule 11 (StructSpecifier)


State 44

   35 DefList: Def DefList •

    $default  reduce using rule 35 (DefList)


State 45

   17 VarDec: VarDec • LB INT RB
   23 ParamDec: Specifier VarDec •

    LB  shift, and go to state 24

    $default  reduce using rule 23 (ParamDec)


State 46

   19 FunDec: ID LP VarList RP •

    $default  reduce using rule 19 (FunDec)


State 47

   21 VarList: ParamDec COMMA • VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 32
    StructSpecifier  go to state 7
    VarList          go to state 66
    ParamDec         go to state 34


State 48

   17 VarDec: VarDec LB INT RB •

    $default  reduce using rule 17 (VarDec)


State 49

   25 CompSt: error • RC
   34 Stmt: error • SEMI

    SEMI  shift, and go to state 67
    RC    shift, and go to state 38


State 50

   58 Exp: INT •

    $default  reduce using rule 58 (Exp)


State 51

   59 Exp: FLOAT •

    $default  reduce using rule 59 (Exp)


State 52

   53 Exp: ID • LP Args RP
   54    | ID • LP RP
   57    | ID •

    LP  shift, and go to state 68

    $default  reduce using rule 57 (Exp)


State 53

   51 Exp: MINUS • Exp

    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 69


State 54

   52 Exp: NOT • Exp

    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 70


State 55

   50 Exp: LP • Exp RP

    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 71


State 56

   31 Stmt: IF • LP Exp RP Stmt
   32     | IF • LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 72


State 57

   33 Stmt: WHILE • LP Exp RP Stmt

    LP  shift, and go to state 73


State 58

   30 Stmt: RETURN • Exp SEMI

    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 74


State 59

   29 Stmt: CompSt •

    $default  reduce using rule 29 (Stmt)


State 60

   24 CompSt: LC DefList StmtList • RC

    RC  shift, and go to state 75


State 61

   26 StmtList: Stmt • StmtList

    error   shift, and go to state 49
    INT     shift, and go to state 50
    FLOAT   shift, and go to state 51
    ID      shift, and go to state 52
    MINUS   shift, and go to state 53
    NOT     shift, and go to state 54
    LP      shift, and go to state 55
    LC      shift, and go to state 26
    IF      shift, and go to state 56
    WHILE   shift, and go to state 57
    RETURN  shift, and go to state 58

    RC  reduce using rule 27 (StmtList)

    CompSt    go to state 59
    StmtList  go to state 76
    Stmt      go to state 61
    Exp       go to state 62


State 62

   28 Stmt: Exp • SEMI
   42 Exp: Exp • ASSIGNOP Exp
   43    | Exp • AND Exp
   44    | Exp • OR Exp
   45    | Exp • RELOP Exp
   46    | Exp • PLUS Exp
   47    | Exp • MINUS Exp
   48    | Exp • STAR Exp
   49    | Exp • DIV Exp
   55    | Exp • LB Exp RB
   56    | Exp • DOT ID

    DOT       shift, and go to state 77
    SEMI      shift, and go to state 78
    RELOP     shift, and go to state 79
    ASSIGNOP  shift, and go to state 80
    PLUS      shift, and go to state 81
    MINUS     shift, and go to state 82
    STAR      shift, and go to state 83
    DIV       shift, and go to state 84
    AND       shift, and go to state 85
    OR        shift, and go to state 86
    LB        shift, and go to state 87


State 63

   41 Dec: VarDec ASSIGNOP • Exp

    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 88


State 64

   37 Def: Specifier DecList SEMI •

    $default  reduce using rule 37 (Def)


State 65

   39 DecList: Dec COMMA • DecList

    error  shift, and go to state 13
    ID     shift, and go to state 35

    VarDec   go to state 40
    DecList  go to state 89
    Dec      go to state 42


State 66

   21 VarList: ParamDec COMMA VarList •

    $default  reduce using rule 21 (VarList)


State 67

   34 Stmt: error SEMI •

    $default  reduce using rule 34 (Stmt)


State 68

   53 Exp: ID LP • Args RP
   54    | ID LP • RP

    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    RP     shift, and go to state 90

    Exp   go to state 91
    Args  go to state 92


State 69

   42 Exp: Exp • ASSIGNOP Exp
   43    | Exp • AND Exp
   44    | Exp • OR Exp
   45    | Exp • RELOP Exp
   46    | Exp • PLUS Exp
   47    | Exp • MINUS Exp
   48    | Exp • STAR Exp
   49    | Exp • DIV Exp
   51    | MINUS Exp •
   55    | Exp • LB Exp RB
   56    | Exp • DOT ID

    DOT   shift, and go to state 77
    STAR  shift, and go to state 83
    DIV   shift, and go to state 84
    LB    shift, and go to state 87

    $default  reduce using rule 51 (Exp)


State 70

   42 Exp: Exp • ASSIGNOP Exp
   43    | Exp • AND Exp
   44    | Exp • OR Exp
   45    | Exp • RELOP Exp
   46    | Exp • PLUS Exp
   47    | Exp • MINUS Exp
   48    | Exp • STAR Exp
   49    | Exp • DIV Exp
   52    | NOT Exp •
   55    | Exp • LB Exp RB
   56    | Exp • DOT ID

    DOT  shift, and go to state 77
    LB   shift, and go to state 87

    $default  reduce using rule 52 (Exp)


State 71

   42 Exp: Exp • ASSIGNOP Exp
   43    | Exp • AND Exp
   44    | Exp • OR Exp
   45    | Exp • RELOP Exp
   46    | Exp • PLUS Exp
   47    | Exp • MINUS Exp
   48    | Exp • STAR Exp
   49    | Exp • DIV Exp
   50    | LP Exp • RP
   55    | Exp • LB Exp RB
   56    | Exp • DOT ID

    DOT       shift, and go to state 77
    RELOP     shift, and go to state 79
    ASSIGNOP  shift, and go to state 80
    PLUS      shift, and go to state 81
    MINUS     shift, and go to state 82
    STAR      shift, and go to state 83
    DIV       shift, and go to state 84
    AND       shift, and go to state 85
    OR        shift, and go to state 86
    RP        shift, and go to state 93
    LB        shift, and go to state 87


State 72

   31 Stmt: IF LP • Exp RP Stmt
   32     | IF LP • Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 94


State 73

   33 Stmt: WHILE LP • Exp RP Stmt

    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 95


State 74

   30 Stmt: RETURN Exp • SEMI
   42 Exp: Exp • ASSIGNOP Exp
   43    | Exp • AND Exp
   44    | Exp • OR Exp
   45    | Exp • RELOP Exp
   46    | Exp • PLUS Exp
   47    | Exp • MINUS Exp
   48    | Exp • STAR Exp
   49    | Exp • DIV Exp
   55    | Exp • LB Exp RB
   56    | Exp • DOT ID

    DOT       shift, and go to state 77
    SEMI      shift, and go to state 96
    RELOP     shift, and go to state 79
    ASSIGNOP  shift, and go to state 80
    PLUS      shift, and go to state 81
    MINUS     shift, and go to state 82
    STAR      shift, and go to state 83
    DIV       shift, and go to state 84
    AND       shift, and go to state 85
    OR        shift, and go to state 86
    LB        shift, and go to state 87


State 75

   24 CompSt: LC DefList StmtList RC •

    $default  reduce using rule 24 (CompSt)


State 76

   26 StmtList: Stmt StmtList •

    $default  reduce using rule 26 (StmtList)


State 77

   56 Exp: Exp DOT • ID

    ID  shift, and go to state 97


State 78

   28 Stmt: Exp SEMI •

    $default  reduce using rule 28 (Stmt)


State 79

   45 Exp: Exp RELOP • Exp

    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 98


State 80

   42 Exp: Exp ASSIGNOP • Exp

    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 99


State 81

   46 Exp: Exp PLUS • Exp

    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 100


State 82

   47 Exp: Exp MINUS • Exp

    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 101


State 83

   48 Exp: Exp STAR • Exp

    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 102


State 84

   49 Exp: Exp DIV • Exp

    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 103


State 85

   43 Exp: Exp AND • Exp

    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 104


State 86

   44 Exp: Exp OR • Exp
